tests/baselines/reference/invalidModuleWithStatementsOfEveryKind.errors.txt
invalidModuleWithStatementsOfEveryKind.ts(3,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(4,5): error TS1044: 'public' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(6,5): error TS1044: 'public' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(11,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(12,5): error TS1044: 'public' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(13,5): error TS1044: 'public' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(15,5): error TS1044: 'public' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(18,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(19,5): error TS1044: 'public' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(19,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(24,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(25,5): error TS1044: 'public' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(28,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(29,5): error TS1044: 'private' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(31,5): error TS1044: 'private' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(36,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(37,5): error TS1044: 'private' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(38,5): error TS1044: 'private' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(40,5): error TS1044: 'private' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(43,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(44,5): error TS1044: 'private' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(44,13): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(49,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(50,5): error TS1044: 'private' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(54,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(55,5): error TS1044: 'static' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(57,5): error TS1044: 'static' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(62,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(63,5): error TS1044: 'static' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(64,5): error TS1044: 'static' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(66,5): error TS1044: 'static' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(69,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(70,5): error TS1044: 'static' modifier cannot appear on a module or namespace element.
invalidModuleWithStatementsOfEveryKind.ts(70,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(75,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
invalidModuleWithStatementsOfEveryKind.ts(76,5): error TS1044: 'static' modifier cannot appear on a module or namespace element.


==== invalidModuleWithStatementsOfEveryKind.ts (36 errors) ====
    // All of these should be an error
    
    module Y {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        public class A { s: string }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
    
        public class BB<T> extends A {
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
            id: number;
        }
    }
    
    module Y2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        public class AA<T> { s: T }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
        public interface I { id: number }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
    
        public class B extends AA<string> implements I { id: number }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
    }
    
    module Y3 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        public module Module {
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            class A { s: string }
        }
    }
    
    module Y4 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        public enum Color { Blue, Red }
        ~~~~~~
!!! error TS1044: 'public' modifier cannot appear on a module or namespace element.
    }
    
    module YY {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        private class A { s: string }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module or namespace element.
    
        private class BB<T> extends A {
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module or namespace element.
            id: number;
        }
    }
    
    module YY2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        private class AA<T> { s: T }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module or namespace element.
        private interface I { id: number }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module or namespace element.
    
        private class B extends AA<string> implements I { id: number }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module or namespace element.
    }
    
    module YY3 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        private module Module {
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module or namespace element.
                ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            class A { s: string }
        }
    }
    
    module YY4 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        private enum Color { Blue, Red }
        ~~~~~~~
!!! error TS1044: 'private' modifier cannot appear on a module or namespace element.
    }
    
    
    module YYY {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        static class A { s: string }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
    
        static class BB<T> extends A {
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
            id: number;
        }
    }
    
    module YYY2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        static class AA<T> { s: T }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
        static interface I { id: number }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
    
        static class B extends AA<string> implements I { id: number }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
    }
    
    module YYY3 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        static module Module {
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            class A { s: string }
        }
    }
    
    module YYY4 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        static enum Color { Blue, Red }
        ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
    }
    